; ModuleID = '/home/carl/AnghaBench/php-src/ext/opcache/Optimizer/extr_sccp.c_zval_to_string_offset.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/opcache/Optimizer/extr_sccp.c_zval_to_string_offset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SUCCESS = common dso_local global i32 0, align 4
@FAILURE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*)* @zval_to_string_offset to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @zval_to_string_offset(i32* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  %6 = load i32*, i32** %5, align 8
  %7 = call i32 @Z_TYPE_P(i32* %6)
  switch i32 %7, label %25 [
    i32 129, label %8
    i32 128, label %13
  ]

8:                                                ; preds = %2
  %9 = load i32*, i32** %5, align 8
  %10 = call i32 @Z_LVAL_P(i32* %9)
  %11 = load i32*, i32** %4, align 8
  store i32 %10, i32* %11, align 4
  %12 = load i32, i32* @SUCCESS, align 4
  store i32 %12, i32* %3, align 4
  br label %27

13:                                               ; preds = %2
  %14 = load i32*, i32** %5, align 8
  %15 = call i32 @Z_STRVAL_P(i32* %14)
  %16 = load i32*, i32** %5, align 8
  %17 = call i32 @Z_STRLEN_P(i32* %16)
  %18 = load i32*, i32** %4, align 8
  %19 = call i32 @is_numeric_string(i32 %15, i32 %17, i32* %18, i32* null, i32 0)
  %20 = icmp eq i32 129, %19
  br i1 %20, label %21, label %23

21:                                               ; preds = %13
  %22 = load i32, i32* @SUCCESS, align 4
  store i32 %22, i32* %3, align 4
  br label %27

23:                                               ; preds = %13
  %24 = load i32, i32* @FAILURE, align 4
  store i32 %24, i32* %3, align 4
  br label %27

25:                                               ; preds = %2
  %26 = load i32, i32* @FAILURE, align 4
  store i32 %26, i32* %3, align 4
  br label %27

27:                                               ; preds = %25, %23, %21, %8
  %28 = load i32, i32* %3, align 4
  ret i32 %28
}

declare dso_local i32 @Z_TYPE_P(i32*) #1

declare dso_local i32 @Z_LVAL_P(i32*) #1

declare dso_local i32 @is_numeric_string(i32, i32, i32*, i32*, i32) #1

declare dso_local i32 @Z_STRVAL_P(i32*) #1

declare dso_local i32 @Z_STRLEN_P(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
